Fix early window crash when parsing options.txt
Backport of #9933